German Translation included

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,4 +20,4 @@
 "Subscribe to": "Subscribe to",
 "Theme errors": "Theme errors",
 "Twitter": "Twitter",
-"You've successfully subscribed to": "You've successfully subscribed to",
+"You've successfully subscribed to": "You've successfully subscribed to"
